trying to fix gmap on mobile and set min height for portfolio fotorama img

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -16,6 +16,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    height: 100%;
     min-height: 450px;
 }
 
